Add uesrname to each comment in getSubjectById
